<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SecondFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/wide_margin"
            android:fontFamily="@font/alex_brush"
            android:text="@string/txt_pregunta"
            android:textColor="#F60707"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />



        <Button
            android:id="@+id/btn_answer"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_marginBottom="28dp"
            android:background="#CF3C3C"
            android:ellipsize="none"
            android:soundEffectsEnabled="true"
            android:text="@string/btn_action_seleccionar"
            android:textAllCaps="true"
            android:textColor="#EDEDED"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pregunta"
            app:layout_constraintVertical_bias="0.64" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btn_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pregunta" >

            <RadioButton
                android:id="@+id/rdbt01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/txt_rdbtn01" />

            <RadioButton
                android:id="@+id/rdbt02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/txt_rdbtn02" />

            <RadioButton
                android:id="@+id/rdbt03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/txt_rdbtn03" />

            <RadioButton
                android:id="@+id/rdbt04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/txt_rdbtn04" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>